DEV-2546 Complete refactoring of SAGE
Finish of the last spike/wip PR.